--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ django-phonenumber-field>=4.0.0
 django-search-views>=0.3.7
 djangorestframework>=3.11.0
 djangorestframework-simplejwt>=4.4.0
+flake8>=3.7.9
