--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,10 @@ services:
               python manage.py runserver 0.0.0.0:8000"
 
     environment: 
-            - DB_HOST=db
-            - DB_NAME=app
-            - DB_USER=postgres
-            - DB_PASSWORD=password
+            - DB_HOST
+            - DB_NAME
+            - DB_USER
+            - DB_PASSWORD
     depends_on: 
             - db  
   db:
