--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-phonenumber-field>=4.0.0
 django-search-views>=0.3.7
 djangorestframework>=3.11.0
 djangorestframework-simplejwt>=4.4.0
+django-cors-headers>=3.2.1
 flake8>=3.7.9
 psycopg2>=2.8.4
 gunicorn>=20.0.0
